<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="progress_bar" type="id" />
    <item name="bottom_navigation_view" type="id" />
    <item name="spinner" type="id" />
    <item name="recycler_view" type="id" />
    <item name="home_badge" type="id" />
    <item name="away_badge" type="id" />
    <item name="bnv_match_prev" type="id" />
    <item name="bnv_match_next" type="id" />
    <item name="bnv_favorites" type="id" />
</resources>
